User details edit form

--- a/src/app/user-description/user-description.component.html
+++ b/src/app/user-description/user-description.component.html
@@ -1,5 +1,5 @@
 <div class="flex-wrapper">
-  <div class="age">Age:</div>
+  <div class="age">Age: {{ celeb.ageInYears }}</div>
 
   <div class="gender">Gender: {{ celeb.gender }}</div>
 
