--- a/src/app/user-details-accordion/user-details-accordion.component.html
+++ b/src/app/user-details-accordion/user-details-accordion.component.html
@@ -24,6 +24,7 @@
         [celeb]="celeb"
         [index]="i"
         (edited)="onEditClicked($event)"
+        (deleted)="onDeleteClicked($event)"
       ></app-user-description
     ></ng-container>
     <ng-container
